# controle_ted

./: .gitignore  README.md  app_gui.py  pyproject.toml  requirements.txt  settings.py
.devcontainer/: devcontainer.json
app_dataframe/: base_dataframe_handler.py  statefull_dataframe_handler.py  stateless_dataframe_handler.py
app_models/: models.py
app_schedule/: check_and_send_email.py  end_schedule.py  execute_pipeline.py  get_email_body.py  run_schedule.py  send_email.py
app_state/: app_state.py
utils/: return_today_str.py
