[tool.poetry]
name = "controle-ted"
version = "0.1.0"
description = ""
authors = ["diogenesdornelles <diogenes.dornelles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
seaborn = "^0.13.2"
schedule = "^1.2.2"
pendulum = "^3.0.0"
pydantic = "^2.9.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.1.1"
black = "^24.8.0"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
